--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Rainbow Infinium</title>
 </head>
 <body>
-    <H1>Hello world!!!2</H1>
+    <H1>Under maintenance</H1>
     
 </body>
 </html>
