--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainbow Infinium</title>
+    <title>Developer page</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="container">
-            <h1>Developer page</h1>
+            <h1>Rainbow Infinium</h1>
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
                 <a href="#">About</a>
