--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <nav>
         <div class="container">
-            <h1>Rainbow Infinium</h1>
+            <h1>Developer page</h1>
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
                 <a href="#">About</a>
