--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
                 <a href="#">About</a>
+                <a href="contacts.html">Contacts</a>
                 <a href="#">Privacy</a>
 
                 <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="dark mode toggle">
