--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 <body>
     <nav>
         <div class="container">
-            <h1>Developer page</h1>
+            <h1>Hello</h1>
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
                 <a href="#">About</a>
-                <a href="contacts">Contacts</a>
                 <a href="#">Privacy</a>
 
                 <button id="dark-mode-toggle" class="dark-mode-toggle" aria-label="dark mode toggle">
-                    <svg class="svg-icon" viewBox="0 0 20 20">
+                    <!-- <svg class="svg-icon" viewBox="0 0 20 20">
                         <path fill="var(--primary)" d="M5.163,5.768c0.167,0.167,0.438,0.167,0.605,0c0.167-0.167,0.167-0.438,0-0.604L3.953,3.349c-0.167-0.167-0.438-0.167-0.604,0c-0.167,0.167-0.167,0.437,0,0.604L5.163,5.768z M14.837,5.768l1.814-1.814c0.167-0.167,0.167-0.438,0-0.604c-0.168-0.167-0.438-0.167-0.605,0l-1.813,1.814c-0.167,0.167-0.167,0.437,0,0.604C14.399,5.935,14.67,5.935,14.837,5.768 M10,4.014c0.236,0,0.428-0.191,0.428-0.428V1.021c0-0.236-0.192-0.428-0.428-0.428S9.572,0.785,9.572,1.021v2.565C9.572,3.823,9.764,4.014,10,4.014 M18.979,10h-3.848c0-2.833-2.297-5.131-5.131-5.131c-2.833,0-5.131,2.297-5.131,5.131H1.021c-0.236,0-0.428,0.191-0.428,0.428s0.192,0.428,0.428,0.428h17.957c0.236,0,0.428-0.191,0.428-0.428S19.215,10,18.979,10 M5.725,10c0-2.361,1.914-4.275,4.275-4.275S14.276,7.639,14.276,10H5.725zM12.565,15.985H11.71v-2.138c0-0.235-0.191-0.427-0.428-0.427H8.717c-0.236,0-0.428,0.191-0.428,0.427v2.138H7.435c-0.235,0-0.427,0.191-0.427,0.428c0,0.118,0.047,0.226,0.125,0.304l2.565,2.564c0.077,0.078,0.185,0.125,0.302,0.125s0.225-0.047,0.302-0.125l2.565-2.564c0.078-0.078,0.126-0.186,0.126-0.304C12.993,16.177,12.802,15.985,12.565,15.985 M10,18.374l-1.533-1.533h0.25c0.236,0,0.428-0.191,0.428-0.428v-2.138h1.709v2.138c0,0.236,0.192,0.428,0.428,0.428h0.251L10,18.374z"></path>
-                    </svg>
+                    </svg> -->
+                    <svg xmlns="http://www.w3.org/2000/svg" class="svg-icon" height="45" width="45" viewBox="0 0 50 50"><path fill="var(--primary)" d="M24.05 46.55 17.3 40H8v-9.3L1.3 24 8 17.3V8h9.3l6.75-6.7L30.7 8H40v9.3l6.7 6.7-6.7 6.7V40h-9.3Zm0-9.55q5.4 0 9.175-3.8Q37 29.4 37 23.95q0-5.4-3.775-9.175Q29.45 11 24.05 11Zm0 5.35 5.4-5.35H37v-7.55L42.45 24 37 18.55V11h-7.55l-5.4-5.45-5.5 5.45H11v7.55L5.55 24 11 29.45V37h7.5ZM24 23.95Z"/></svg>
                 </button>
             </div>
  
@@ -37,7 +37,42 @@
         <a href="#">Privacy</a>
     </nav-mobile>
     <div class="space"></div>
-    <h2>Under development</h2>
+    <h2>Hello</h2>
+    <div class="img">
+        <div>
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+
+        <div class="copy-overplay"></div>
+        <div class="protect-alert">
+            <span>Copy is forbidden!</span>
+            <button class="confirmAlert">OK</button>
+        </div>
+        <p id="no-paste">Boza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
+            oza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
+            oza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
+        </p>
+        <button class="custom-btn">
+            <a href="#" class="btn">Button</a>
+        </button>
+        </div>
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+    </div>
+    <div class="img">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+        <img src="./images/road.jpg" alt="road">
+    </div>
     <div class="img">
         <img src="./images/road.jpg" alt="road">
         <img src="./images/road.jpg" alt="road">
