--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Developer page</title>
+    <title>Rainbow Infinium</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <nav>
         <div class="container">
-            <h1>Hello</h1>
+            <h1>Rainbow Infinium</h1>
             <div class="menu">
                 <a href="#" class="is-active">Home</a>
                 <a href="#">About</a>
@@ -38,54 +38,32 @@
     </nav-mobile>
     <div class="space"></div>
     <h2>Hello</h2>
-    <div class="img">
-        <div>
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-
+    <div>
+        <!-- Copy protection -->
         <div class="copy-overplay"></div>
         <div class="protect-alert">
             <span>Copy is forbidden!</span>
             <button class="confirmAlert">OK</button>
         </div>
+        <!-- End copy protection -->
+
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+    
         <p id="no-paste">Boza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
             oza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
             oza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a f
         </p>
-        <button class="custom-btn">
-            <a href="#" class="btn">Button</a>
-        </button>
-        </div>
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-    </div>
-    <div class="img">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-    </div>
-    <div class="img">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
-        <img src="./images/road.jpg" alt="road">
+
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
+        <img src="./images/road.jpg" alt="road" oncontextmenu="return false" class="custom_img">
     </div>
 
-  
-    
     <script src="script.js"></script>
 </body>
 </html>
