--- a/privacy.html
+++ b/privacy.html
@@ -1,20 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Rainbow Infinium</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Privacy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <!-- Navigation -->
+	    <!-- Navigation -->
     <nav>
         <div class="container">
             <h1>Rainbow Infinium</h1>
             <div class="menu">
-                <div><a href="https://balantaim.github.io" class="is-active">Home</a></div>
+                <div><a href="https://balantaim.github.io">Home</a></div>
                 <div><a href="#">About</a></div>
-                <div><a href="#">Privacy</a></div>
+                <div><a href="https://balantaim.github.io/Privacy" class="is-active">Privacy</a></div>
 
                 <!-- <a href="/" class="is-active">Home</a>
                 <a href="#">About</a>
@@ -47,7 +47,7 @@
     </nav-mobile>
     <!-- Navigation End -->
     <div class="space"></div>
-    <h2>Rainbow Infinium</h2>
+    <h2>Privacy Policy</h2>
 
     <!-- Disable copy content -->
     <div class="copy-overplay"></div>
@@ -55,41 +55,7 @@
         <span>Copy is forbidden!</span>
         <button class="confirmAlert">OK</button>
     </div>
-    <div class="img">
-    
-        <div class="column">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-        </div>
-        <div class="column">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-        </div>
-        <div class="column">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-        </div>
-        <div class="column">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-            <img src="./images/road.jpg" oncontextmenu="return false" alt="road" class="test_img">
-        </div>
 
-    </div>
-
-    <p id="no-paste">Boza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a foza sdsdasfsdgrs afda fad afas daf a</p>
-
-    <div class="space"></div>
-    <div class="space"></div>
-
-    <!-- Start -->
-
-
-    <!-- end -->
-  
     <footer>
         <div class="footer-content">
             <p>Copyright &copy;
