--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <div class="menu">
                 <div><a href="https://balantaim.github.io" class="is-active">Home</a></div>
                 <div><a href="#">About</a></div>
-                <div><a href="#">Privacy</a></div>
+                <div><a href="https://balantaim.github.io/privacy">Privacy Policy</a></div>
 
                 <!-- <a href="/" class="is-active">Home</a>
                 <a href="#">About</a>
