--- a/privacy.html
+++ b/privacy.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<title>Privacy</title>
+	<title>Privacy Policy</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -14,7 +14,7 @@
             <div class="menu">
                 <div><a href="https://balantaim.github.io">Home</a></div>
                 <div><a href="#">About</a></div>
-                <div><a href="https://balantaim.github.io/Privacy" class="is-active">Privacy</a></div>
+                <div><a href="https://balantaim.github.io/privacy" class="is-active">Privacy Policy</a></div>
 
                 <!-- <a href="/" class="is-active">Home</a>
                 <a href="#">About</a>
