--- a/index.html
+++ b/index.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rainbow Infinium</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css"/>
 </head>
 <body>
     <!-- Navigation -->
     <nav>
         <div class="container">
-            <h1>Rainbow Infinium</h1>
+            <h1>RI</h1>
             <div class="menu">
                 <div><a href="https://balantaim.github.io" class="is-active">Home</a></div>
                 <div><a href="#">About</a></div>
@@ -55,6 +56,42 @@
         <span>Copy is forbidden!</span>
         <button class="confirmAlert">OK</button>
     </div>
+
+    <div class="container">
+        <div class="swiper">
+            <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                    <div class="image__wrapper">
+                        <img src="./images/road.jpg" alt="" />
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="image__wrapper">
+                        <img src="./images/road.jpg" alt="" />
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="image__wrapper">
+                        <img src="./images/road.jpg" alt="" />
+                    </div>
+                </div>
+
+                <div class="swiper-slide">
+                    <div class="image__wrapper">
+                        <img src="./images/road.jpg" alt="" />
+                    </div>
+                </div>
+
+            </div>
+
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-prev"></div>
+            <div class="swiper-button-next"></div>
+        </div>
+    </div>
+
     <div class="img">
     
         <div class="column">
@@ -98,6 +135,8 @@
                 </script>, Rainbow Infinium.</p>
         </div>
     </footer>
+    <script src="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.js"></script>
+    <!-- <script src="swiper-bundle.esm.browser.min.js"></script> -->
     <script src="script.js"></script>
 </body>
 </html>
