--- a/index.html
+++ b/index.html
@@ -60,7 +60,21 @@
 
     <!-- gallery -->
     <section>
-
+        <div class="card-container">
+            <div class="image-container">
+                <div class="image"><img src="./images/road.jpg" alt="road"></div>
+                <div class="image"><img src="./images/road2.jpg" alt="road"></div>  
+                <div class="image"><img src="./images/road.jpg" alt="road"></div>  
+                <div class="image"><img src="./images/road2.jpg" alt="road"></div>  
+                <div class="image"><img src="./images/road.jpg" alt="road"></div>  
+                <div class="image"><img src="./images/road2.jpg" alt="road"></div>  
+            </div>
+            <div class="popup-image">
+                <span>&times;</span>
+                <img src="./images/road.jpg" alt="">
+                <!-- <img src="./images/road.jpg" style="height: 350px; width: 450px;" alt=""> -->
+            </div>
+        </div>
     </section>
 
     <div class="space"></div>
